--- a/.gitignore
+++ b/.gitignore
@@ -72,4 +72,5 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
 # intelij idea
+*ProjectSettings/RiderScriptEditorPersistedState.asset
 .idea/*
