Add cut confirmation in edit mode

--- a/Assets/MeshTools/Editor/MeshToolsEditor.asmdef
+++ b/Assets/MeshTools/Editor/MeshToolsEditor.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "MeshToolsEditor",
-    "rootNamespace": "MeshTools.Editor",
+    "rootNamespace": "MeshTools",
     "references": [
         "GUID:eb8bf2f185691e348ad2794a974824a1"
     ],
